[package]
name = "data-changing-solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "1.14.12"

[dev-dependencies]
solana-program-test = "1.14.12"
solana-sdk = "1.14.12"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]